--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -35,10 +35,10 @@ body {
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
@@ -71,9 +71,9 @@ body {
     line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.96rem;
+    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.2rem;
@@ -141,7 +141,7 @@ body {
   background-color: #82786e !important;
 }
 .bg-warning {
-  background-color: #879a9f !important;
+  background-color: #ffffff !important;
 }
 .bg-danger {
   background-color: #b1a374 !important;
@@ -168,8 +168,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #426cb4 !important;
-  border-color: #426cb4 !important;
+  background-color: #df5c00 !important;
+  border-color: #df5c00 !important;
   color: #ffffff !important;
 }
 .btn-secondary:hover,
@@ -177,14 +177,14 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #2d4a7c !important;
-  border-color: #2d4a7c !important;
+  background-color: #933c00 !important;
+  border-color: #933c00 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #2d4a7c !important;
-  border-color: #2d4a7c !important;
+  background-color: #933c00 !important;
+  border-color: #933c00 !important;
 }
 .btn-info,
 .btn-info:active {
@@ -228,23 +228,23 @@ body {
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
-  color: #ffffff !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #808080 !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus,
 .btn-warning.active {
-  color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
-  color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-danger,
 .btn-danger:active {
@@ -332,22 +332,22 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #273f69;
-  color: #273f69;
+  border-color: #793200;
+  color: #793200;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #426cb4;
-  border-color: #426cb4;
+  background-color: #df5c00;
+  border-color: #df5c00;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #426cb4 !important;
-  border-color: #426cb4 !important;
+  background-color: #df5c00 !important;
+  border-color: #df5c00 !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -392,22 +392,22 @@ body {
 .btn-warning-outline,
 .btn-warning-outline:active {
   background: none;
-  border-color: #55666b;
-  color: #55666b;
+  border-color: #cccccc;
+  color: #cccccc;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus,
 .btn-warning-outline.active {
-  color: #ffffff;
-  background-color: #879a9f;
-  border-color: #879a9f;
+  color: #808080;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
-  color: #ffffff !important;
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
+  color: #808080 !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active {
@@ -467,7 +467,7 @@ body {
   color: #426cb4 !important;
 }
 .text-secondary {
-  color: #426cb4 !important;
+  color: #df5c00 !important;
 }
 .text-success {
   color: #5b686b !important;
@@ -476,7 +476,7 @@ body {
   color: #82786e !important;
 }
 .text-warning {
-  color: #879a9f !important;
+  color: #ffffff !important;
 }
 .text-danger {
   color: #b1a374 !important;
@@ -493,7 +493,7 @@ a.text-primary:focus {
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #273f69 !important;
+  color: #793200 !important;
 }
 a.text-success:hover,
 a.text-success:focus {
@@ -505,7 +505,7 @@ a.text-info:focus {
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #55666b !important;
+  color: #cccccc !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
@@ -526,7 +526,7 @@ a.text-black:focus {
   background-color: #82786e;
 }
 .alert-warning {
-  background-color: #879a9f;
+  background-color: #ffffff;
 }
 .alert-danger {
   background-color: #b1a374;
@@ -581,7 +581,7 @@ a:hover {
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #ced6d8;
+  color: #ffffff;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
@@ -1410,17 +1410,17 @@ body {
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
   color: #ffffff !important;
-  background: #426cb4 !important;
+  background: #df5c00 !important;
   box-shadow: none !important;
 }
 .cid-rwCbkie77X .navbar {
-  background: #ffffff;
+  background: #426cb4;
   transition: none;
-  min-height: 77px;
+  min-height: 80px;
   padding: .5rem 0;
 }
 .cid-rwCbkie77X .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #426cb4;
 }
 .cid-rwCbkie77X a {
   font-style: normal;
@@ -1459,7 +1459,7 @@ body {
 }
 .cid-rwCbkie77X .menu-logo .navbar-brand {
   display: flex;
-  margin-left: 5rem;
+  margin-left: 4rem;
   padding: 0;
   transition: padding .2s;
   min-height: 3.8rem;
@@ -1511,7 +1511,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rwCbkie77X .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #426cb4;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1582,7 +1582,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 .cid-rwCbkie77X button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1658,7 +1658,7 @@ body {
 }
 @media (min-width: 992px) {
   .cid-rwCbkie77X .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
+    max-height: calc(98.5vh - 8rem);
   }
 }
 .cid-rwCbkie77X .collapsed button.navbar-toggler {
@@ -1810,10 +1810,10 @@ body {
 }
 .cid-rwCbkie77X .nav-link:hover,
 .cid-rwCbkie77X .dropdown-item:hover {
-  color: #767676 !important;
+  color: #cccccc !important;
 }
 .cid-rwCk7XV98k {
-  background-image: url("../../../assets/images/mbr-1920x1279.jpg");
+  background-image: url("../../../assets/images/img-20171031-wa0012-1024x576.jpg");
 }
 .cid-rwCk7XV98k .mbr-icofont {
   font-size: 48px;
@@ -1948,5 +1948,258 @@ body {
   color: #ffffff;
 }
 .cid-rwCk7XV98k H1 {
+  color: #ffffff;
+}
+.cid-rwDDu07QtH {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rwDDu07QtH h2 {
+  text-align: left;
+}
+.cid-rwDDu07QtH h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rwDDu07QtH p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rwDDu07QtH .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rwDDu07QtH .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rwDDu07QtH .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rwDDu07QtH .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rwDDu07QtH .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rwDDu07QtH .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rwDDu07QtH .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rwDDu07QtH .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rwDDu07QtH .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rwDSP5YMYD {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rwDSP5YMYD .mbr-section-subtitle,
+.cid-rwDSP5YMYD .mbr-text {
+  color: #767676;
+}
+.cid-rwDSP5YMYD .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rwDSP5YMYD .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rwDSP5YMYD .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rwDSP5YMYD .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rwDSP5YMYD .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-rwDSP5YMYD .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-rwDSP5YMYD .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rwDSP5YMYD .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rwDSP5YMYD .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-rwDSP5YMYD .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-rwDSP5YMYD .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rwDSP5YMYD .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-rwDSP5YMYD .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rwDSP5YMYD .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-rwDMpkLJ4A {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #426cb4;
+}
+.cid-rwDMpkLJ4A .form-text {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-rwDMpkLJ4A .content {
+    text-align: center;
+  }
+  .cid-rwDMpkLJ4A .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-rwDMpkLJ4A .img-logo img {
+  height: 4.5rem;
+}
+.cid-rwDMpkLJ4A .form-group,
+.cid-rwDMpkLJ4A .input-group-btn {
+  padding: 0;
+}
+.cid-rwDMpkLJ4A .form-control {
+  font-size: .75rem;
+  text-align: center;
+  min-width: 150px;
+}
+.cid-rwDMpkLJ4A .input-group-btn .btn {
+  padding: .75rem 1.5625rem !important;
+  margin-left: .625rem;
+  text-transform: none;
+  color: #fff;
+  text-align: center;
+}
+.cid-rwDMpkLJ4A .copyright .mbr-text {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-rwDMpkLJ4A .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rwDMpkLJ4A .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #000;
+  opacity: .05;
+}
+.cid-rwDMpkLJ4A .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rwDMpkLJ4A .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #232323;
+}
+.cid-rwDMpkLJ4A .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rwDMpkLJ4A .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rwDMpkLJ4A .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rwDMpkLJ4A .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rwDMpkLJ4A .foot-logo {
+    text-align: center !important;
+  }
+  .cid-rwDMpkLJ4A .foot-title {
+    text-align: center !important;
+  }
+  .cid-rwDMpkLJ4A .mbr-text {
+    text-align: center !important;
+  }
+  .cid-rwDMpkLJ4A .form-group {
+    margin: 0;
+  }
+}
+.cid-rwDMpkLJ4A .copyright .mbr-text {
+  color: #ffffff;
+}
+.cid-rwDMpkLJ4A .foot-title {
+  color: #ffffff;
+}
+.cid-rwDMpkLJ4A .foot-logo {
+  color: #ffffff;
+}
+.cid-rwDMpkLJ4A .btn {
+  margin: 0 6rem 0 0;
+}
+.cid-rwDMpkLJ4A .mbr-links-column {
   color: #ffffff;
 }
