--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2094,6 +2094,28 @@ body {
 .cid-rwDSP5YMYD .card-img:hover .mbr-section-btn {
   opacity: 1;
 }
+.cid-rwGvaebM2D {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #4f4943, #426cb4);
+}
+@media (min-width: 992px) {
+  .cid-rwGvaebM2D .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rwGvaebM2D .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-rwGvaebM2D .mbr-section-title {
+  text-align: center;
+}
+.cid-rwGvaebM2D .mbr-text,
+.cid-rwGvaebM2D .mbr-section-btn {
+  text-align: left;
+}
 .cid-rwG0JRoedy {
   padding-top: 45px;
   padding-bottom: 45px;
