create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2111,7 +2111,7 @@ body {
 }
 .cid-rwGvaebM2D .mbr-text,
 .cid-rwGvaebM2D .mbr-section-btn {
-  text-align: left;
+  text-align: center;
 }
 .cid-rwG0JRoedy {
   padding-top: 45px;
