create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2203,9 +2203,6 @@ body {
     margin: 0;
   }
 }
-.cid-rwG0JRoedy .foot-text {
-  text-align: left;
-}
 .cid-rwCbkie77X .navbar {
   background: #426cb4;
   transition: none;
@@ -2605,24 +2602,24 @@ body {
 .cid-rwCbkie77X .dropdown-item:hover {
   color: #cccccc !important;
 }
-.cid-rxd3NI6K3c {
+.cid-rxdaEzVZwO {
   padding-top: 60px;
   padding-bottom: 75px;
   background-color: #426cb4;
 }
-#custom-html-n {
+#custom-html-o {
   /* Type valid CSS here */
 }
-#custom-html-n div {
+#custom-html-o div {
   padding: 80px 0;
   color: #777;
   text-align: center;
 }
-#custom-html-n p {
+#custom-html-o p {
   font-size: 60px;
   color: #777;
 }
-.cid-rxd4xCJTYH {
+.cid-rxdaIjNGwn {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #426cb4;
