--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1891,8 +1891,7 @@ body {
   width: 100%;
 }
 .cid-rwCk7XV98k .modalWindow .modalWindow-container .modalWindow-video-container .modalWindow-video {
-  display: block;
-  margin: auto;
+  width: 100%;
 }
 .cid-rwCk7XV98k a.close {
   position: absolute;
